WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53095
WebKit is using CSBackupSetItemExcluded incorrectly
https://bugs.webkit.org/show_bug.cgi?id=53095
Summary
WebKit is using CSBackupSetItemExcluded incorrectly
Darin Adler
Reported
2011-01-25 10:05:37 PST
WebKit is using CSBackupSetItemExcluded incorrectly
Attachments
Patch
(15.76 KB, patch)
2011-01-25 10:11 PST
,
Darin Adler
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-01-25 10:11:52 PST
Created
attachment 80076
[details]
Patch
Darin Adler
Comment 2
2011-01-25 10:12:47 PST
<
rdar://problem/8790540
>
Darin Adler
Comment 3
2011-01-25 11:03:27 PST
Committed
r76614
: <
http://trac.webkit.org/changeset/76614
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug