Source/WebCore/platform/mac/FileSystemMac.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2007 Apple Inc. All rights reserved.
+ * Copyright (C) 2007, 2011 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -25,10 +25,12 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
+
 #import "config.h"
 #import "FileSystem.h"
 
 #import "PlatformString.h"
+#import <wtf/RetainPtr.h>
 #import <wtf/text/CString.h>
 
 namespace WebCore {
@@ -60,6 +62,27 @@ CString openTemporaryFile(const char* prefix, PlatformFileHandle& platformFileHa
         return CString();
 
     return CString(temporaryFilePath.data());
+}
+
+bool canExcludeFromBackup()
+{
+#ifdef BUILDING_ON_TIGER
+    return false;
+#else
+    return true;
+#endif
+}
+
+bool excludeFromBackup(const String& path)
+{
+#ifdef BUILDING_ON_TIGER
+    UNUSED_PARAM(path);
+    return false;
+#else
+    // It is critical to pass FALSE for excludeByPath because excluding by path requires root privileges.
+    CSBackupSetItemExcluded(pathAsURL(path).get(), TRUE, FALSE); 
+    return true;
+#endif
 }
 
 } // namespace WebCore
